Closed Bug 461761 Opened 16 years ago Closed 16 years ago

assertion: Obtained accessible isn't a child of this accessible.

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: surkov, Assigned: surkov)

Details

Attachments

(1 file)

Easy to reproduce by accExplorer. It's enough to investigate document area.
Attached patch patchSplinter Review
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #344879 - Flags: review?(aaronleventhal)
Attachment #344879 - Flags: review?(aaronleventhal) → review+
http://hg.mozilla.org/mozilla-central/rev/7de88087e15b
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: