Bug 461761 - assertion: Obtained accessible isn't a child of this accessible, r=aaronlev